--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "open-browser-webpack-plugin": "0.0.5",
     "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.4"
   },
