--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bundle.js",
   "dependencies": {
     "babel-eslint": "^7.2.3",
+    "bootstrap": "^3.3.7",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
@@ -16,8 +17,10 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "html-webpack-plugin": "^2.28.0",
+    "jquery": "^3.2.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "moment": "^2.18.1",
     "open-browser-webpack-plugin": "0.0.5",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
@@ -37,5 +40,10 @@
   "bugs": {
     "url": "https://github.com/quanta2006/streetWeChat/issues"
   },
-  "homepage": "https://github.com/quanta2006/streetWeChat#readme"
+  "homepage": "https://github.com/quanta2006/streetWeChat#readme",
+  "devDependencies": {
+    "chunk-manifest-webpack-plugin": "^1.1.0",
+    "webpack-bundle-analyzer": "^2.6.0",
+    "webpack-chunk-hash": "^0.4.0"
+  }
 }
